--- a/roles/s3_create_bucket/tasks/main.yml
+++ b/roles/s3_create_bucket/tasks/main.yml
@@ -1,62 +1,10 @@
 ---
 # https://docs.ionos.com/ansible/
 
-- name: Create group
-  ionoscloudsdk.ionoscloud.group:
-    token: "{{ ionos_token | default(omit) }}"
-    name: "{{ ionos_s3_user_group_name }}"
-    s3_privilege: true
-
-- name: Create an 1Password item (if not existent) with email & generated password for dcd login and dummy s3_credentials section
-  dbildungscloud.onepwd.create_s3_item:
-    credentials: "{{ op_credentials }}"
-    vault: "{{ instance_vault }}"
-    SECRET_NAME: "{{ s3_credentials_secret_name }}"
-    USER_EMAIL: "{{ ionos_s3_user_email }}"
-    LOGIN_URL: https://dcd.ionos.com/latest
-    session_shorthand: ansible-run
-
-- name: Create an 1Password item (if not existent) with email & generated password for dcd login
-  throttle: 1
-  dbildungscloud.onepwd.item:
-    credentials: "{{ op_credentials }}"
-    vault: "{{ instance_vault }}"
-    name: "{{ s3_credentials_secret_name }}"
-    overwrite: False
-    session_shorthand: ansible-run
-    fields:
-      - name: "{{ ionos_s3_user_email_op_filed_name}}"
-        type: text
-        value: "{{ ionos_s3_user_email }}"
-      - name: "{{ ionos_s3_login_url_op_filed_name}}"
-        type: text
-        value: "{{ ionos_s3_login_url }}"
-
-- name: Create user for IONOS DCD
-  ionoscloudsdk.ionoscloud.user:
-    token: "{{ ionos_token | default(omit) }}"
-    # once created, ansible doesn't update name - use GUI
-    firstname: "{{ ionos_s3_user_firstname }}"
-    lastname: "{{ ionos_s3_user_lastname }}"
-    email: "{{ ionos_s3_user_email }}"
-    user_password: "{{ ionos_s3_user_password }}"
-    administrator: false
-  register: reg_ionos_user
-
-  # separate because user cant be added to group in first step, state: update is needed
-- name: Add user to group in IONOS DCD
-  ionoscloudsdk.ionoscloud.user:
-    token: "{{ ionos_token | default(omit) }}"
-    user: "{{ ionos_s3_user_email }}"
-    groups:
-    - {{ ionos_s3_user_group_name }}
-    state: update
-  changed_when: false
-
 - name: Create an s3key for IONOS DCD
   ionoscloudsdk.ionoscloud.s3key:
     token: "{{ ionos_token | default(omit) }}"
-    user: "{{ reg_ionos_user.user.id }}"
+    user: "{{ s3_ionos_user }}"
     idempotency: True
   register: reg_s3_key
 
