--- a/roles/s3_create_bucket/tasks/main.yml
+++ b/roles/s3_create_bucket/tasks/main.yml
@@ -65,30 +65,33 @@
     region: "{{ s3_region }}"
   loop: "{{ s3_lifecycle_rules }}"
   loop_control:
-    loop_var: s3_lifecycle_rules
+    loop_var: s3_lifecycle_rule
 
   # Storing the access key, access secret, bucket_name and url in one 1PW item.
 - name: Edit S3 Credentials in 1Password
   dbildungscloud.onepwd.item:
     credentials: "{{ op_credentials }}"
-    vault: "{{ instance_vault }}"
+    vault: "{{ s3_1pw_target.vault }}"
     session_shorthand: ansible-run
-    name: "{{ s3_credentials_secret_name }}"
+    name: "{{ s3_1pw_target.item }}"
     fields: 
-      - name: "{{ s3_bucket_name_op_filed_name}}"
+      - name: "{{ s3_1pw_target.bucket_name_op_filed_name}}"
         type: text
-        value: "{{ s3_bucket_name }}"
-        section: "{{ s3_credentials_section_name }}"
-      - name: "{{ s3_access_key_op_filed_name}}"
+        value: "{{ s3_1pw_target.bucket_name }}"
+        section: "{{ s3_1pw_target.credentials_section_name }}"
+      - name: "{{ s3_1pw_target.access_key_op_filed_name}}"
         type: text
         value: "{{ reg_s3_key.s3key.id }}"
-        section: "{{ s3_credentials_section_name }}"
-      - name: "{{ s3_access_secret_op_filed_name}}"
+        section: "{{ s3_1pw_target.credentials_section_name }}"
+      - name: "{{ s3_1pw_target.access_secret_op_filed_name}}"
         type: password
         value: "{{ reg_s3_key.s3key.properties.secret_key }}"
-        section: "{{ s3_credentials_section_name }}"
-      - name: "{{ s3_url_op_fild_name }}"
+        section: "{{ s3_1pw_target.credentials_section_name }}"
+      - name: "{{ s3_1pw_target.url_op_fild_name }}"
         type: text
-        value: "{{ s3_url }}"
-        section: "{{ s3_credentials_section_name }}"
-  when: s3_migration_enabled is false
+        value: "{{ s3_1pw_target.url }}"
+        section: "{{ s3_1pw_target.credentials_section_name }}"
+  loop: "{{ s3_1pw_targets }}"
+  loop_control:
+    loop_var: s3_1pw_target
+  when: s3_one_password_enable | bool 
