--- a/roles/monitoring_bbb/vars/main.yml
+++ b/roles/monitoring_bbb/vars/main.yml
@@ -266,7 +266,7 @@ bbb_prometheus_turn_node_exporter_job:
 bbb_prometheus_scrape_config: "{{ bbb_prometheus_servers_only_scrape_config + (bbb_prometheus_scalelite_scrape_config if not bbb_servers_only else []) +\
  ([bbb_prometheus_turn_coturn_exporter_job] if bbb_turn_server_exporter_enabled else []) + ([bbb_prometheus_turn_coturn_cadvisor_job] if bbb_turn_server_cadvisor_enabled else []) +\
  ([bbb_prometheus_scalelite_cadvisor_job] if scalelite_cadvisor_enabled else []) + ([bbb_prometheus_scalelite_postgresexporter_job] if scalelite_postgresexporter_enabled else []) +\
- ([bbb_prometheus_owasp_cadvisor_job] if owasp_cadvisor_enabled else []) +\
+ ([bbb_prometheus_owasp_cadvisor_job, bbb_prometheus_owasp_node_exporter_job] if owasp_cadvisor_enabled else []) +\
  ([bbb_prometheus_freeswitch_node_exporter_job] if bbb_freeswitch_server_node_exporter_enabled else []) + ([bbb_prometheus_freeswitch_cadvisor_job] if bbb_freeswitch_server_cadvisor_enabled else []) }}"
 
 bbb_prometheus_servers_only_scrape_config:
@@ -277,7 +277,6 @@ bbb_prometheus_servers_only_scrape_config:
 bbb_prometheus_scalelite_scrape_config:
   - "{{ bbb_prometheus_scalelite_node_exporter_job }}"
   - "{{ bbb_prometheus_scalelite_autoscaler_job }}"
-  - "{{ bbb_prometheus_owasp_node_exporter_job }}"
   - "{{ bbb_prometheus_turn_node_exporter_job }}"
 
 bbb_prometheus_basic_auth_secret_mount_path: "/etc/bbb/{{ bbb_instance_name }}"
