feat: more vars stuff, also add asserts

--- a/roles/s3_create_bucket/defaults/main.yml
+++ b/roles/s3_create_bucket/defaults/main.yml
@@ -2,7 +2,7 @@ s3_create_bucket_ionos_user: "s3-user"
 s3_create_bucket_region: "eu-central-2"
 s3_create_bucket_url: "https://{{ s3_create_bucket_region }}.ionoscloud.com"
 s3_create_bucket_bucket_versioning: false
-s3_create_bucket_bucket_policy: null
+s3_create_bucket_bucket_policy: "null" # "null" as string sets the policy to absent
 s3_create_bucket_bucket_name: "data"
 s3_create_bucket_cors_settings: false
 s3_create_bucket_allowed_origins:
@@ -18,3 +18,9 @@ s3_create_bucket_lifecycle_rules: []
 #    rule_expiration_days: 7
 #    rule_noncurrent_version_expiration_days: 9
 #    rule_prefix: ""
+s3_create_bucket_1pw_targets: []
+#  - credentials_section_name: ""
+#    bucket_name_1pw_field_name: ""
+#    access_key_1pw_field_name: ""
+#    access_secret_1pw_field_name: ""
+#    url_1pw_field_name: ""
