--- a/roles/s3_create_bucket/tasks/main.yml
+++ b/roles/s3_create_bucket/tasks/main.yml
@@ -1,14 +1,14 @@
 ---
-# https://docs.ionos.com/ansible/
+- ansible.builtin.import_tasks: "assert.yml"
 
-- name: Create an s3key for IONOS DCD
+- name: "Create an s3key for IONOS DCD"
   ionoscloudsdk.ionoscloud.s3key:
     token: "{{ ionos_token | default(omit) }}"
     user: "{{ s3_create_bucket_ionos_user }}"
     idempotency: true
   register: s3_create_bucket_r_s3_key
 
-- name: Create a bucket
+- name: "Create bucket '{{ s3_create_bucket_bucket_name }}'"
   amazon.aws.s3_bucket:
     aws_access_key: "{{ s3_create_bucket_r_s3_key.s3key.id }}"
     aws_secret_key: "{{ s3_create_bucket_r_s3_key.s3key.properties.secret_key }}"
@@ -16,10 +16,10 @@
     region: "{{ s3_create_bucket_region }}"
     s3_url: "{{ s3_create_bucket_url }}"
     versioning: "{{ s3_create_bucket_bucket_versioning | default(omit) }}"
-    policy: "{{ s3_create_bucket_bucket_policy | default(omit) }}"
+    policy: "{{ s3_create_bucket_bucket_policy | default('null') }}"
     name: "{{ s3_create_bucket_bucket_name }}"
 
-- name: Configure a S3 lifecycle rule to delete incomplete S3 Multipart Upload
+- name: "Configure a S3 lifecycle rule to delete incomplete S3 Multipart Upload"
   community.aws.s3_lifecycle:
     aws_access_key: "{{ s3_create_bucket_r_s3_key.s3key.id }}"
     aws_secret_key: "{{ s3_create_bucket_r_s3_key.s3key.properties.secret_key }}"
@@ -31,26 +31,22 @@
     endpoint_url: "{{ s3_create_bucket_url }}"
     region: "{{ s3_create_bucket_region }}"
 
-# Prior to release 5.0.0 this module was called community.aws.aws_s3_cors. The usage did not change.
-# Using community.aws 2.3.0 needs to be updated to s3_cors with community.aws update (latest version now 9.1.0)
-- name: Add CORS Settings on web access IONOS S3 Buckets
-#  community.aws.s3_cors:
+- name: "Add/remove CORS Settings on web access"
   community.aws.aws_s3_cors:
     aws_access_key: "{{ s3_create_bucket_r_s3_key.s3key.id }}"
     aws_secret_key: "{{ s3_create_bucket_r_s3_key.s3key.properties.secret_key }}"
     endpoint_url: "{{ s3_create_bucket_url }}"
     region: "{{ s3_create_bucket_region }}"
     name: "{{ s3_create_bucket_bucket_name }}"
-    state: "present"
+    state: "{{ s3_create_bucket_cors_settings | ternary('present', 'absent') }}"
     rules:
       - allowed_origins: "{{ s3_create_bucket_allowed_origins }}"
         allowed_methods: "{{ s3_create_bucket_allowed_methods }}"
         allowed_headers: "{{ s3_create_bucket_allowed_headers }}"
         expose_headers: "{{ s3_create_bucket_expose_headers }}"
         max_age_seconds: "{{ s3_create_bucket_max_age_seconds }}"
-  when: s3_create_bucket_cors_settings
 
-- name: Configure lifecycle rules on the bucket that delete items when they match a rule-specific prefix and exceed the rule-specific expiration time
+- name: "Configure lifecycle rules"
   community.aws.s3_lifecycle:
     aws_access_key: "{{ s3_create_bucket_r_s3_key.s3key.id }}"
     aws_secret_key: "{{ s3_create_bucket_r_s3_key.s3key.properties.secret_key }}"
@@ -68,7 +64,7 @@
     loop_var: s3_create_bucket_lifecycle_rule
 
 # Store the access key, access secret, bucket_name and url in one 1PW item.
-- name: Edit S3 Credentials in 1Password
+- name: "Push credentials to 1password"
   dbildungscloud.onepwd.item:
     credentials: "{{ op_credentials }}"
     vault: "{{ s3_create_bucket_1pw_target.vault }}"
@@ -77,7 +73,7 @@
     fields:
       - name: "{{ s3_create_bucket_1pw_target.bucket_name_1pw_field_name }}"
         type: "text"
-        value: "{{ s3_create_bucket_1pw_target.bucket_name }}"
+        value: "{{ s3_create_bucket_bucket_name }}"
         section: "{{ s3_create_bucket_1pw_target.credentials_section_name }}"
       - name: "{{ s3_create_bucket_1pw_target.access_key_1pw_field_name }}"
         type: "text"
@@ -94,4 +90,5 @@
   loop: "{{ s3_create_bucket_1pw_targets }}"
   loop_control:
     loop_var: s3_create_bucket_1pw_target
-  when: s3_create_bucket_one_password_enable | bool
+  when:
+    - s3_create_bucket_1pw_targets | length > 1
