--- a/roles/s3_create_bucket/tasks/assert.yml
+++ b/roles/s3_create_bucket/tasks/assert.yml
@@ -8,7 +8,7 @@
       - "s3_create_bucket_url is url"
       - "s3_create_bucket_bucket_versioning is boolean"
       - "s3_create_bucket_bucket_policy is string"
-      - "s3_create_bucket_bucket_name | regex_search(r'^[a-z0-9][a-z0-9-_.]{1,61}[a-z0-9]$')"
+      - "s3_create_bucket_bucket_name | regex_search('^[a-z0-9][a-z0-9-_.]{1,61}[a-z0-9]$')"
       - "s3_create_bucket_cors_settings is boolean"
       - "s3_create_bucket_allowed_origins | type_debug == 'list'"
       - "s3_create_bucket_allowed_methods | type_debug == 'list'"
