--- a/roles/s3_create_bucket/tasks/main.yml
+++ b/roles/s3_create_bucket/tasks/main.yml
@@ -4,7 +4,7 @@
 - name: "Create an s3key for IONOS DCD"
   ionoscloudsdk.ionoscloud.s3key:
     token: "{{ ionos_token | default(omit) }}"
-    user: "{{ s3_create_bucket_ionos_user }}"
+    user: "{{ s3_create_bucket_ionos_user | default(ionos_username | default(omit)) }}"
     idempotency: true
   register: s3_create_bucket_r_s3_key
 
@@ -14,7 +14,7 @@
     aws_secret_key: "{{ s3_create_bucket_r_s3_key.s3key.properties.secret_key }}"
     state: "present"
     region: "{{ s3_create_bucket_region }}"
-    s3_url: "{{ s3_create_bucket_url }}"
+    endpoint_url: "{{ s3_create_bucket_url }}"
     versioning: "{{ s3_create_bucket_bucket_versioning | default(omit) }}"
     policy: "{{ s3_create_bucket_bucket_policy | default('null') }}"
     name: "{{ s3_create_bucket_bucket_name }}"
