--- a/roles/s3_create_bucket/defaults/main.yml
+++ b/roles/s3_create_bucket/defaults/main.yml
@@ -1,4 +1,5 @@
 s3_create_bucket_ionos_user: ""
+s3_create_bucket_ionos_token: ""
 s3_create_bucket_region: "eu-central-2"
 s3_create_bucket_url: "https://s3.{{ s3_create_bucket_region }}.ionoscloud.com"
 s3_create_bucket_bucket_versioning: false
