fix 1pw targets

--- a/roles/s3_create_bucket/tasks/assert.yml
+++ b/roles/s3_create_bucket/tasks/assert.yml
@@ -33,6 +33,7 @@
   ansible.builtin.assert:
     quiet: true
     that:
+      - "item.vault is string"
       - "item.credentials_section_name is string"
       - "item.bucket_name_1pw_field_name is string"
       - "item.access_key_1pw_field_name is string"
