--- a/roles/s3_create_bucket/tasks/assert.yml
+++ b/roles/s3_create_bucket/tasks/assert.yml
@@ -3,7 +3,7 @@
   ansible.builtin.assert:
     quiet: true
     that:
-      - "lookup('community.general.collection_version', 'amazon.aws') is version('9.0' '>=')"
+      - "lookup('community.general.collection_version', 'amazon.aws') is version('9.0', '>=')"
       - "s3_create_bucket_ionos_token | default(ionos_token) is string"
       - "s3_create_bucket_ionos_user | default(ionos_username) is string"
       - "s3_create_bucket_region is string"
